--- a/.github/workflows/update_wakatime_stats.yml
+++ b/.github/workflows/update_wakatime_stats.yml
@@ -1,8 +1,9 @@
 name: Waka Readme
 
 on:
-  push:
-    branches: [ master ]
+  schedule:
+    # Runs at '?' MSK
+    - cron: "15 0 * * 0"
 
 jobs:
   update-readme:
@@ -13,7 +14,7 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          LOCALE: "ru_RU"
+          LOCALE: "ru"
           SHOW_LINES_OF_CODE: "True"
           SHOW_PROJECTS: "False"
           SHOW_PROFILE_VIEWS: "False"
