--- a/.github/workflows/update_recent_activity.yml
+++ b/.github/workflows/update_recent_activity.yml
@@ -1,17 +1,17 @@
-name: Covid Russia Stats
+name: Recent Activity
 
 on:
   schedule:
-    - cron: "0 * * * *"
+    - cron: '*/10 * * * *'
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - uses: puf17640/covid-box@master
+      - uses: JasonEtco/activity-box@master
         env:
           GH_PAT: ${{ secrets.GH_PAT }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          COUNTRY: ${{ secrets.COUNTRY }}
-          GIST_ID: ${{ secrets.GIST_ID }}
+          GH_USERNAME: Bangerok
+          GIST_ID: 6809dad64dbe25bf400d172a3679ff7c
