--- a/.github/workflows/update_wakatime_stats.yml
+++ b/.github/workflows/update_wakatime_stats.yml
@@ -1,9 +1,8 @@
-name: Waka Readme
+name: Wakatime Stats
 
 on:
   schedule:
-    # Runs at '?' MSK
-    - cron: "15 0 * * 0"
+    - cron: "0 0 * * 0"
 
 jobs:
   update-readme:
@@ -14,7 +13,6 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          LOCALE: "ru"
           SHOW_LINES_OF_CODE: "True"
           SHOW_PROJECTS: "False"
           SHOW_PROFILE_VIEWS: "False"
