--- a/.github/workflows/update_productive.yml
+++ b/.github/workflows/update_productive.yml
@@ -3,7 +3,7 @@ on:
   repository_dispatch:
     types: [build-event]
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "*/20 * * * *"
 jobs:
   build:
     name: Profile Gist with Productive Stats
