--- a/.github/workflows/update_achievements.yml
+++ b/.github/workflows/update_achievements.yml
@@ -1,11 +1,8 @@
 name: Achievements
 
 on:
-  push:
-    branches:
-      - master
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "30 3 * * *"
 
 jobs:
   github-metrics:
@@ -16,11 +13,10 @@ jobs:
         with:
           # Your GitHub token
           token: ${{ secrets.METRICS_TOKEN }}
-
           # Options
           user: Bangerok
           filename: assets/metrics/achievements.*
+          config_display: columns
           base: ""
           plugin_achievements: yes
-          plugin_achievements_threshold: C
-          plugin_achievements_secrets: yes
+          plugin_achievements_threshold: X
