--- a/.github/workflows/update_achievements.yml
+++ b/.github/workflows/update_achievements.yml
@@ -2,7 +2,7 @@ name: Achievements
 
 on:
   schedule:
-    - cron: "30 3 * * *"
+    - cron: "15 3 * * *"
 
 jobs:
   github-metrics:
@@ -14,9 +14,10 @@ jobs:
           # Your GitHub token
           token: ${{ secrets.METRICS_TOKEN }}
           # Options
-          user: Bangerok
+          user: SmithyVL
           filename: assets/metrics/achievements.*
           config_display: columns
           base: ""
           plugin_achievements: yes
           plugin_achievements_threshold: X
+          plugin_achievements_display: compact
