--- a/.github/workflows/update_rss_activity_en.yml
+++ b/.github/workflows/update_rss_activity_en.yml
@@ -1,4 +1,4 @@
-name: RSS and Activity [RU]
+name: RSS and Activity [EN]
 
 on:
   schedule:
@@ -16,19 +16,15 @@ jobs:
 
           # Configure template type
           template: markdown
-          filename: docs/translations/README_RU.md
-          markdown: docs/template/README_TEMPLATE_RU.md
+          filename: docs/translations/README_EN.md
+          markdown: docs/template/README_TEMPLATE_EN.md
 
           # Options
-          user: Bangerok
+          user: SmithyVL
           base: ""
           config_timezone: Europe/Kirov
           plugin_activity: yes
-          plugin_activity_days: 14
           plugin_activity_filter: all
-          plugin_activity_limit: 5
-          plugin_activity_load: 300
-          plugin_activity_visibility: all
           plugin_activity_timestamps: yes
           plugin_rss: yes
           plugin_rss_source: https://feeds.feedblitz.com/baeldung
